--- a/webb/his.css
+++ b/webb/his.css
@@ -2,21 +2,24 @@
 body{
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: antiquewhite;
+    background-color: black
 }
 
 h1{
+    color: white;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 h3{
+    color: white;
     font-size: 23px;
     margin-left: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 p{
+    color: white;
     font-size: 17px;
     margin-left: 90px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
@@ -24,8 +27,18 @@ p{
 }
 
 h4{
+    color: white;
     font-size: 23px;
     margin-left: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+h2{
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
+
 
