--- a/favoriter/his.css
+++ b/favoriter/his.css
@@ -1,7 +1,7 @@
 body {
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgb(101, 150, 94)
+    background-color: rgb(0, 0, 0)
 }
 
 .grid_container {
@@ -12,7 +12,7 @@ body {
     display: grid;
     grid-template-columns: auto auto auto;
     grid-template-rows: 120px auto;
-    background-color: green;
+    background-color: rgb(0, 0, 0);
     padding: 10px;
 }
 
@@ -40,19 +40,19 @@ body {
 
 .button1:hover {
     font-size: xx-large;
-    background-color: #04AA6D;
+    background-color: #4affbd;
     color: white;
 }
 
 .button2:hover {
     font-size: xx-large;
-    background-color: #04AA6D;
+    background-color: #4affbd;
     color: white;
 }
 
 .button3:hover {
     font-size: xx-large;
-    background-color: #04AA6D;
+    background-color: #4affbd;
     color: white;
 }
 
@@ -75,3 +75,54 @@ a:link {
     margin-right: auto;
     width: 50%;
   }
+
+  body {
+	background: #000;
+}
+.container {
+	width: 200px;
+	height: 200px;
+	perspective: 800px;
+	margin: 15% auto;
+}
+.cube {
+	width: 100%;
+	height: 100%;
+	transform-style: preserve-3d;
+	animation: spin 5s linear infinite;
+}
+.face {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	background-size: cover;
+	border: 2px solid #04dabe;
+	border-radius: 10px;
+}
+.face.front {
+	transform: translateZ(100px);
+}
+.face.back {
+	transform: rotateY(180deg) translateZ(100px);
+}
+.face.right {
+	transform: rotateY(90deg) translateZ(100px);
+}
+.face.left {
+	transform: rotateY(-90deg) translateZ(100px);
+}
+.face.top {
+	transform: rotateX(90deg) translateZ(100px);
+}
+.face.bottom {
+	transform: rotateX(-90deg) translateZ(100px);
+}
+@keyframes spin {
+	0% {
+		transform: rotateX(0deg) rotateY(0deg);
+	}
+	100% {
+		transform: rotateX(360deg) rotateY(360deg);
+	}
+}
+
