--- a/index.css
+++ b/index.css
@@ -1,16 +1,14 @@
-
-
-a{
-    color: #01b4f9;
+a {
+	color: #01b4f9;
 	text-decoration: none;
 }
 
-h2{
-    margin-top: 30%;
-    color: aqua;
-    margin-right: 500px;
-    margin-bottom: 450px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h2 {
+	margin-top: 30%;
+	color: aqua;
+	margin-right: 500px;
+	margin-bottom: 450px;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
@@ -22,16 +20,19 @@ body {
 	margin: 0;
 	background-color: #091a22;
 }
+
 .wrapper {
 	perspective: 1000px;
 }
+
 .cube {
 	position: relative;
 	width: 200px;
 	height: 200px;
 	transform-style: preserve-3d;
-	animation: animate 4s linear infinite;
+	animation: animate 10s linear infinite;
 }
+
 .side {
 	position: absolute;
 	width: 200px;
@@ -39,7 +40,7 @@ body {
 	display: grid;
 	background-color: #01b4f9;
 	border-radius: 10px;
-	place-content: center;
+	place-content: left;
 	border: 3px solid #fff;
 	box-shadow: 0 0 200px #01b4f9, 0 0 20px #01b4f9, 0 0 30px #01b4f9;
 }
@@ -47,18 +48,23 @@ body {
 .front {
 	transform: translateZ(100px);
 }
+
 .back {
 	transform: rotateY(180deg) translateZ(100px);
 }
+
 .top {
 	transform: rotateX(90deg) translateZ(100px);
 }
+
 .bottom {
 	transform: rotateX(-90deg) translateZ(100px);
 }
+
 .left {
 	transform: rotateY(-90deg) translateZ(100px);
 }
+
 .right {
 	transform: rotateY(90deg) translateZ(100px);
 }
@@ -67,6 +73,7 @@ body {
 	0% {
 		transform: rotateX(0deg) rotateY(0deg);
 	}
+
 	100% {
 		transform: rotateX(360deg) rotateY(360deg);
 	}
