--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ a {
 	text-decoration: none;
 }
 
-h2 {
+h1 {
 	margin-top: 30%;
 	color: aqua;
 	margin-right: 500px;
@@ -17,13 +17,10 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-	margin: 0;
+	margin: auto;
 	background-color: #091a22;
 }
 
-.wrapper {
-	perspective: 1000px;
-}
 
 .cube {
 	position: relative;
