--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 a {
-	color: #01b4f9;
+	color: #00bfff;
 	text-decoration: none;
 }
 
 h1 {
 	margin-top: 30%;
-	color: aqua;
+	color: rgb(255, 255, 255);
 	margin-right: 500px;
 	margin-bottom: 450px;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
