--- a/blog/styles.css
+++ b/blog/styles.css
@@ -5,21 +5,18 @@
 }
 
 body {
-  font-family: 'Arial', sans-serif;
-  background-color:white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgb(71, 72, 164);
   color: #333;
 }
 
 
-.header {
+header {
   background-color: #007bff;
   color: white;
-  padding: 20px 0;
+  padding: 7px 0;
   text-align: center;
-}
-
-.header h1 {
-  font-size: 2.5em;
+  font-size: 1.1rem;
   margin-bottom: 10px;
 }
 
@@ -28,24 +25,24 @@ body {
 }
 
 .container {
-  width: 90%;
+  width: 85%;
   margin: 0 auto;
 }
+
 
 .main-content {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 20px;
-  ;
 }
 
 .sidebar {
   width: 25%;
-  height: fit-content;
   background-color: #ffffff;
   padding: 20px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 10px;
+  position: fixed;
 }
 
 .sidebar h3 {
@@ -73,13 +70,15 @@ body {
 
 .articles {
   width: 70%;
+  margin-left: 35%;
 }
 
 .article {
   background-color: #f9f9f9;
   padding: 20px;
   margin-bottom: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px;
+  position: relative;
 }
 
 .article h2 {
@@ -93,13 +92,12 @@ body {
 }
 
 .article ul {
-  list-style-type: disc;
-  margin-left: 20px;
+margin-left: 20px;
 }
 
 .article p {
   font-size: 1.1em;
-  margin-top: 10px; 
+  margin-top: 10px;
 }
 
 .banner img {
@@ -115,5 +113,4 @@ body {
   text-align: center;
   padding: 10px;
   margin-top: auto;
-}   
-
+}
