--- a/index.css
+++ b/index.css
@@ -81,3 +81,13 @@ body {
 		transform: rotateX(360deg) rotateY(360deg);
 	}
 }
+
+@media only screen and (max-width: 600px) {
+	body {
+		background-color: blue;
+	}
+
+   img {
+		width: 20%;
+	}
+}
