--- a/index.css
+++ b/index.css
@@ -21,11 +21,10 @@ body {
 	margin-top: 2%;
 }
 
-.div{
+.div {
 	align-items: center;
 	columns: 1;
 	margin-top: 3%;
-
 }
 
 .cube {
@@ -38,14 +37,12 @@ body {
 
 .side {
 	position: absolute;
-	width: 200px;
-	height: 200px;
+	width: 100%;
+	height: 100%;
 	display: grid;
-	background-color: #01b4f9;
-	border-radius: 10px;
+	background-color: #01b3f93f;
 	place-content: left;
-	border: 3px solid #fff;
-	box-shadow: 0 0 200px #01b4f9, 0 0 20px #01b4f9, 0 0 30px #01b4f9;
+	box-shadow: 0 0 200px #0000003e, 0 0 20px #01b4f9, 0 0 1px #01b4f9;
 }
 
 .front {
@@ -79,5 +76,23 @@ body {
 
 	100% {
 		transform: rotateX(360deg) rotateY(360deg);
+	}
+}
+
+@media (max-width: 768px) {
+	h1 {
+		margin-top: 10%;
+		margin-right: 10%;
+		margin-bottom: 20%;
+		text-align: center;
+	}
+
+	.cube {
+		width: 150px;
+		height: 150px;
+	}
+
+	.front, .back, .top, .bottom, .left, .right {
+		transform: translateZ(75px);
 	}
 }
