--- a/index.css
+++ b/index.css
@@ -80,19 +80,37 @@ body {
 }
 
 @media (max-width: 768px) {
-	h1 {
-		margin-top: 10%;
-		margin-right: 10%;
-		margin-bottom: 20%;
-		text-align: center;
-	}
-
 	.cube {
-		width: 150px;
-		height: 150px;
+		width: 200px; 
+		height: 200px;
 	}
 
-	.front, .back, .top, .bottom, .left, .right {
-		transform: translateZ(75px);
+	.side {
+		width: 100%;
+		height: 100%;
+	}
+
+	.front {
+		transform: translateZ(100px);
+	}
+
+	.back {
+		transform: rotateY(180deg) translateZ(100px);
+	}
+
+	.top {
+		transform: rotateX(90deg) translateZ(100px);
+	}
+
+	.bottom {
+		transform: rotateX(-90deg) translateZ(100px);
+	}
+
+	.left {
+		transform: rotateY(-90deg) translateZ(100px);
+	}
+
+	.right {
+		transform: rotateY(90deg) translateZ(100px);
 	}
 }
