--- a/blog/styles.css
+++ b/blog/styles.css
@@ -10,7 +10,6 @@ body {
   color: #333;
 }
 
-
 header {
   background-color: #007bff;
   color: white;
@@ -18,6 +17,7 @@ header {
   text-align: center;
   font-size: 1.1rem;
   margin-bottom: 10px;
+  position: relative;
 }
 
 .header p {
@@ -29,6 +29,18 @@ header {
   margin: 0 auto;
 }
 
+.hamburger-checkbox {
+  display: none;
+}
+
+.hamburger {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
 
 .main-content {
   display: flex;
@@ -42,6 +54,11 @@ header {
   padding: 20px;
   box-shadow: 2px 2px 10px;
   position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  transform: translateX(0);
+  transition: transform 0.3s ease-in-out;
 }
 
 .sidebar h3 {
@@ -112,4 +129,27 @@ header {
   text-align: center;
   padding: 10px;
   margin-top: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .sidebar {
+    transform: translateX(-100%);
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .hamburger-checkbox:checked~.sidebar {
+    transform: translateX(0);
+  }
+
+  .main-content {
+    flex-direction: column;
+  }
+
+  .articles {
+    width: 100%;
+    margin-left: 0;
+  }
 }
