--- a/blog/styles.css
+++ b/blog/styles.css
@@ -45,7 +45,8 @@ header {
 .main-content {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20px;ärthrth
+  margin-top: 20px;
+  ärthrth
 }
 
 .sidebar {
