--- a/old/style.css
+++ b/old/style.css
@@ -1,12 +1,14 @@
-h1{
+h1 {
     color: brown;
 }
 
-h2{
+h2 {
     color: blue;
 }
 
-h3{
-    color: black; font-size: 200%; font-style: initial;
+h3 {
+    color: black;
+    font-size: 200%;
+    font-style: initial;
     border-style: dashed 10px;
 }
