--- a/webb/his.css
+++ b/webb/his.css
@@ -1,32 +1,30 @@
-
-body{
+body {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black
 }
 
-h1{
+h1 {
     color: white;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-h3{
+h3 {
     color: white;
     font-size: 23px;
     margin-left: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-p{
+p {
     color: white;
     font-size: 17px;
     margin-left: 90px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-    ;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h4{
+h4 {
     color: white;
     font-size: 23px;
     margin-left: 100px;
@@ -34,11 +32,7 @@ h4{
 }
 
 
-h2{
+h2 {
     color: white;
     font-family: 'Times New Roman', Times, serif;
 }
-
-
-
-
