--- a/gamestore/contact.css
+++ b/gamestore/contact.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
-a
+
 .container {
     width: 90%;
     max-width: 1200px;
@@ -93,7 +93,7 @@ a
     display: block;
 }
 
-.product h4, .product p {
+.product p {
     margin: 0.5rem 0;
 }
 
@@ -116,4 +116,3 @@ a
         gap: 1rem;
     }
 }
-
