--- a/gamestore/styles.css
+++ b/gamestore/styles.css
@@ -93,7 +93,8 @@ body {
     display: block;
 }
 
-.product h4, .product p {
+.product h4,
+.product p {
     margin: 0.5rem 0;
 }
 
@@ -115,4 +116,3 @@ body {
         gap: 1rem;
     }
 }
-
